<resources>
    ///DIA-APP NAME
    <string name="app_name">DiaApp</string>
    /// MainPage
    <string name="main_fact">FACTS</string>
    <string name="main_game">GAME</string>
    ///FACTS
    <string name="facts_title">FACTS</string>
    <string name="facts_type1">TYPE 1</string>
    <string name="facts_type2">TYPE 2</string>
    ///TYPE1
    <string name="type1_title">TYPE 1</string>
    <string name="type1_Desc"> collect data</string>
    <string name="type1_btn">Btn</string>
    <string name="type1_btn2">Btn2</string>
    <string name="type1_btn3">Btn3</string>
    <string name="type1_btn4">Btn4</string>
    <string name="type1_btn5">Btn5</string>

    ///TYPE2
    <string name="type2_title">TYPE 2</string>
    <string name="type2_Desc"> collect data</string>
    <string name="type2_btn">Btn</string>
    <string name="type2_btn2">Btn2</string>
    <string name="type2_btn3">Btn3</string>
    <string name="type2_btn4">Btn4</string>
    <string name="type2_btn5">Btn5</string>

    ///ResponsePage
    <string name="resp_title">Collect Subject</string>
    <string name="resp_info">Collect Intent</string>
    <string name="Piccaption">DiaPicture</string>

    ///ResponsePage2
    <string name="resp_title2">Collect Subject</string>
    <string name="resp_info2">Collect Intent</string>
    <string name="Piccaption2">DiaPicture</string>

    ///GAME
    <string name="game_piccaption">GameScreen</string>
    <string name="game_alt1">Choice-Data</string>
    <string name="game_alt2">Choice2-Data</string>
    <string name="game_alt3">Choice3-Data</string>
    <string name="game_cancel">Cancel</string>
    <string name="game_rules">Rules</string>

    ///GAMEOVER
    <string name="gameover_text1">GAME</string>
    <string name="gameover_text2">OVER</string>
    <string name="gameover_btn">CONTINUE</string>

    ///RULES
    <string name="rules_title">Rules  GameDescription</string>
    <string name="rules_rules">-1, -2, -3,-4</string>

</resources>