<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Facts">

    <TextView
        android:id="@+id/facts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_title"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/facts_type1btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/facts_type1btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_type1"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/facts_type2btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_title" />

    <Button
        android:id="@+id/facts_type2btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_type2"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_type1btn" />
</androidx.constraintlayout.widget.ConstraintLayout>