<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameGameover">

    <TextView
        android:id="@+id/gameover_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameover_text1"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/gameover_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameover_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameover_text2"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/gameover_continuebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameover_text1" />

    <Button
        android:id="@+id/gameover_continuebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameover_btn"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameover_text2" />
</androidx.constraintlayout.widget.ConstraintLayout>